log
Wed 24 Apr 2024 06:21:46 PM UTC: 
 tests:  0|6
total_score: 0/70
31a1517
Thu 25 Apr 2024 12:41:41 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h: In function ‘createMap’:
hashmap.h:21:49: error: invalid application of ‘sizeof’ to incomplete type ‘HashMap’
   21 |     HashMap * mapa = (HashMap *) malloc (sizeof(HashMap));
      |                                                 ^~~~~~~
hashmap.h:22:9: error: invalid use of incomplete typedef ‘HashMap’
   22 |     mapa->buckets = (Pair **) calloc (capacity, sizeof(Pair *));
      |         ^~
hashmap.h:23:9: error: invalid use of incomplete typedef ‘HashMap’
   23 |     mapa->capacity = capacity;
      |         ^~
hashmap.h:24:9: error: invalid use of incomplete typedef ‘HashMap’
   24 |     mapa->current = -1;
      |         ^~
In file included from test.c:4:
hashmap.c: At top level:
hashmap.c:54:11: error: redefinition of ‘createMap’
   54 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h:20:11: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   20 | HashMap * createMap(long capacity){
      |           ^~~~~~~~~
Compilation failed
f5eeab0
Thu 25 Apr 2024 12:46:51 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
0d4e216
Thu 25 Apr 2024 12:47:12 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9803ced
Thu 25 Apr 2024 12:49:16 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
ae24f8b
Thu 25 Apr 2024 12:53:48 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
bdba3f2
Thu 25 Apr 2024 12:55:36 AM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
de512b0
Thu 25 Apr 2024 12:57:04 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
cb2c654
Thu 25 Apr 2024 12:58:29 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
946a03c
Thu 25 Apr 2024 12:58:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
2218ae2
